--- a/css/headerStil.css
+++ b/css/headerStil.css
@@ -4,29 +4,32 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
   }
- 
-  html { font-size: calc(1em + 1vw) }
- 
-  body {
-    background-color: #342056;
-  }
- 
-  header {
- 
-    background-color: #5454c5;
-    padding: 1em;
-    width: 100%;
-    
 
-  }
- 
-  .rubrikFlex{
+  
 
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-    
-  }
+
+
+ .navigation{
+
+  background-color:#ffc759 ;
+  display: flex;
+  justify-content: space-around;
+  padding: 1em;
+  font-size: 1em;
+ }
+
+ .navigation a{
+
+  color: black;
+  font-weight: 700;
+
+ }
+
+ .navigation a:hover{
+
+text-decoration: underline;
+
+ }
  
     h1{ font-size: 2em; }
  
@@ -34,11 +37,6 @@
 
     h3{ font-size: 0.5em;}
 
-    .rubrik{
-      color: #ffc759;
-      text-align: center;
-      display: flex;
-      align-items:center;
-    }
+
  
  
