--- a/css/headerStil.css
+++ b/css/headerStil.css
@@ -5,13 +5,19 @@
     font-family: Arial, Helvetica, sans-serif;
   }
 
-  
+  header {
+   background-color: #1F2833;
+    padding: 1em;
+    width: 100%;
+    
+
+  }
 
 
 
  .navigation{
 
-  background-color:#ffc759 ;
+  background-color:#339989 ;
   display: flex;
   justify-content: space-around;
   padding: 1em;
@@ -22,6 +28,7 @@
 
   color: black;
   font-weight: 700;
+  text-decoration: none;
 
  }
 
