--- a/css/signup.css
+++ b/css/signup.css
@@ -8,8 +8,6 @@ flex-direction: column;
 
 .slåIn{
 
-margin-left: 35%;
-margin-right: 30%;
 margin-bottom: 5em;
 
 }
@@ -21,9 +19,11 @@ flex-direction: column;
 justify-content: center;
 width: 15em;
 
-background-color: #5454c5;
+background-color: #339989;
 padding: 1em;
 border-radius: 5%;
+border-width: 0.2em;
+border-color: black;
 }
 
 .uppgifter{
@@ -31,10 +31,12 @@ border-radius: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+     background-color: #7de2d1;
     gap: 1em;
-    background-color: #342056;
     padding: 1em;
     border-radius: 5%;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
 
 }
 
@@ -48,7 +50,7 @@ padding-bottom: 0.5em;
 
 .submit{
 
-margin-top: 1em;
+margin-top: 1.5em;
 margin-left: 30%;
 margin-right: 30%;
 border-radius: 10%;
@@ -58,9 +60,7 @@ border-color: black;
 
 .submit h3 {
 
-font-size: 2em;
-padding-top: 1em;
-padding-bottom: 1em;
+font-size: 1.5em;
 
 }
 
@@ -93,6 +93,7 @@ input, textarea {
 
 font-size: 1em;
 
+
 }
 
 p {
@@ -102,4 +103,24 @@ p {
     text-align: center;
     padding: 0.3em;
     font-weight: bold;
+}
+
+.macka{
+display: flex;
+justify-content: center;
+gap: 5em;
+
+}
+
+.brödEtt, .brödTvå{
+margin-top: 15%;
+width: 20%;
+height: 20%;
+}
+
+.registreraHär{
+
+    display: flex;
+    justify-content: center;
+
 }
