--- a/footer.css
+++ b/footer.css
@@ -4,7 +4,7 @@ body {
    }
 
    .footer-distributed{
-    background-color: #220E24;
+    background-color: #9E2B25;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
@@ -28,7 +28,8 @@ body {
     
    .footer-distributed h3{
     color:#ffc759 ;
-    font: normal 36px 'Cookie', cursive;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2em;
     margin: 0;
    }
     
@@ -92,6 +93,7 @@ body {
     font-weight: normal;
     font-size:14px;
     line-height:2;
+    margin-right: 2.7em;
    }
     
    .footer-distributed .footer-center p a{
