--- a/css/gridStyle.css
+++ b/css/gridStyle.css
@@ -5,6 +5,7 @@
 
 .grid-itemNav {
   grid-area: nav;
+  background-color: #1F2833;
 }
 
 .grid-itemGlobalChat {
@@ -48,6 +49,7 @@
 }
 
 .grid-container {
+  min-height: 100vh;
   display: grid;
   gap: 20px;
   grid-template-areas:
@@ -66,7 +68,9 @@
 }
 
 @media (min-width: 500px) {
+  
   .grid-container {
+    min-height: 100vh;
     grid-template-columns: 1fr 3fr;
     grid-template-areas:
       "rubrik rubrik"
@@ -84,6 +88,7 @@
 
 @media (min-width: 700px) {
   .grid-container {
+    min-height: 100vh;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-areas:
       "rubrik rubrik rubrik"
