--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,9 +27,9 @@
 
           <li><a href="">Om oss</a></li>
 
-          <li><a href="login.ejs">Log in</a></li>
+          <li><a href="/users/login">Log in</a></li>
 
-          <li><a href="">Sign up</a></li>
+          <li><a href="/users/register">Sign up</a></li>
         </ul>
       </div>
       <div class="grid-itemGlobalChat">Global - chat</div>
