--- a/views/register.ejs
+++ b/views/register.ejs
@@ -36,7 +36,7 @@
 
         <div class="grid-itemLogin">
 
-            <h1>Logga in</h1>
+            <h1>Registrera dig</h1>
 
         </div>
   
@@ -46,7 +46,7 @@
               <h3>NordicViking</h3> 
   
               <p class="footer-links">
-                <a href="index.php">Hem</a>
+                <a href="/">Hem</a>
                 ·
                 <a href="#">Regler</a>
                 ·
