--- a/public/css/gridStyle.css
+++ b/public/css/gridStyle.css
@@ -84,7 +84,18 @@
     "preFooter"
     "footer";
 }
+@media (max-width: 500px) {
 
+  
+  .grid-itemNav{
+    font-size: 1em;
+  }
+
+  .navList{
+    gap: 10px;
+  }
+  
+}
 @media (min-width: 500px) {
   
   .grid-container {
@@ -118,4 +129,13 @@
   .grid-itemNav ul {
     flex-direction: row;
   }
+
+  .grid-itemRubrik{font-size: x-large;}
+
+  .navList a {
+
+    font-size: 2.5em;
+
+  }
+
 }
