--- a/public/css/logingridStyle.css
+++ b/public/css/logingridStyle.css
@@ -32,6 +32,20 @@ background-color: cornflowerblue;
       "footer";
   }
   
+  @media (max-width: 500px) {
+
+  
+    .grid-itemNav{
+      font-size: 1em;
+    }
+    
+  .navList{
+    gap: 10px;
+  }
+  
+    
+  }
+  
   @media (min-width: 500px) {
     
     .grid-container {
@@ -47,6 +61,7 @@ background-color: cornflowerblue;
       display: flex;
       justify-content: space-between;
     }
+
   }
   
   @media (min-width: 700px) {
@@ -62,5 +77,15 @@ background-color: cornflowerblue;
     .grid-itemNav ul {
       flex-direction: row;
     }
+
+    
+  .navList a {
+
+    font-size: 2.5em;
+
+  }
+
+
+  .grid-itemRubrik{font-size: x-large;}
   }
   
