--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  max-width: 100vw;
 }
 
 body {
@@ -18,7 +19,12 @@ body {
   margin-top: 1.5em;
   padding-left: 1em;
   padding-right: 1em;
-  font-size: 2em;
+}
+
+.Wrapp img{
+
+  max-width: 20vw;
+
 }
 
 .navList {
@@ -46,7 +52,6 @@ body {
 .navList a {
   color: white;
   text-decoration: none;
-  font-size: 2em;
 }
 
 .navList a:hover {
