--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/logingridStyle.css" />
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/loginform.css">
 </head>
 <body>
     
@@ -36,7 +37,36 @@
 
         <div class="grid-itemLogin">
 
-            <h1>Logga in</h1>
+          <form action="/users/login" method="POST">
+            <div class="form-group-togehter">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  class="form-control"
+                  placeholder="Enter Email"
+                />
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input
+                  type="password"
+                  id="password"
+                  name="password"
+                  class="form-control"
+                  placeholder="Enter Password"
+                />
+              </div>
+              
+            <button type="submit" class="loginButton">Login</button>
+            </div>
+            <p class="lead mt-4">
+              No Account? <a href="/users/register">Register</a>
+            </p>
+          </form>
+         
 
         </div>
   
