--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,6 +38,8 @@
         <div class="grid-itemLogin">
 
           <form action="/users/login" method="POST">
+            <h1>Log in</h1>
+            <%- include('partials/messages') %>
             <div class="form-group-togehter">
               <div class="form-group">
                 <label for="email">Email</label>
