--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/loginform.css">
+    
 </head>
 <body>
     
@@ -36,8 +37,12 @@
         </div>
 
         <div class="grid-itemLogin">
-
+          
+          
           <form action="/users/register" method="POST">
+            <h1>Sign up</h1>
+            
+            <%- include('partials/messages') %>
             <div class="form-group-togehter">
             <div class="form-group">
               <label for="name">Name</label>
