Det funkar nuuu

--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -20,3 +20,10 @@
         <%= error_msg %>  
       </div>
 <%} %>
+
+
+<% if(error != '') {%>
+    <div class="successmsg">
+        <%= error %>  
+      </div>
+<%} %>
