--- a/public/css/loginform.css
+++ b/public/css/loginform.css
@@ -1,9 +1,6 @@
 form {
   background-color: cadetblue;
-  max-width: 20%;
-  padding: 2em;
-  border-radius: 20%;
-
+  max-width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,22 +8,31 @@ form {
 }
 
 .loginButton {
-  margin-top: 2em;
+  margin-bottom: 0.5em;
 }
 
-.form-group-togehter {
-  padding: 2em;
-  background-color: chocolate;
-  padding: 2em;
-  border-radius: 20%;
-  
+.h1form {
+  background-color: #deb887;
+  width: 100%;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.form-group-togehter {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
+  border-radius: 5%;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .grid-itemLogin {
   display: flex;
@@ -40,4 +46,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+h5 {
+  font-size: small;
 }
