--- a/views/register.ejs
+++ b/views/register.ejs
@@ -40,22 +40,27 @@
           
           
           <form action="/users/register" method="POST">
-            <h1>Sign up</h1>
+            <div class="h1form"> <h2>Sign up</h2></div>
             
             <%- include('partials/messages') %>
             <div class="form-group-togehter">
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input
-                type="name"
-                id="name"
-                name="name"
-                class="form-control"
-                placeholder="Enter Name"
-                value="<%= typeof name != 'undefined' ? name : '' %>"
-              />
-            </div>
-            <div class="form-group">
+            
+              
+
+                <label for="name">Name</label>
+                <input
+                  type="name"
+                  id="name"
+                  name="name"
+                  class="form-control"
+                  placeholder="Enter Name"
+                  value="<%= typeof name != 'undefined' ? name : '' %>"
+                />
+
+              
+             
+            
+            
               <label for="email">Email</label>
               <input
                 type="email"
@@ -65,8 +70,8 @@
                 placeholder="Enter Email"
                 value="<%= typeof email != 'undefined' ? email : '' %>"
               />
-            </div>
-            <div class="form-group">
+            
+            
               <label for="password">Password</label>
               <input
                 type="password"
@@ -76,9 +81,9 @@
                 placeholder="Create Password"
                 value="<%= typeof password != 'undefined' ? password : '' %>"
               />
-            </div>
-            <div class="form-group">
-              <label for="password2">Confirm Password</label>
+            
+            
+              <label for="password2">Password</label>
               <input
                 type="password"
                 id="password2"
@@ -87,7 +92,7 @@
                 placeholder="Confirm Password"
                 value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
               />
-            </div>
+            
             <button type="submit" class="btn btn-primary btn-block">
               Register
              </button>
