--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,11 +21,11 @@
       </div>
       <div class="grid-itemNav">
         <ul class="navList">
-          <li><a href="">Home</a></li>
+          <li><a href="/">Home</a></li>
 
-          <li><a href="">Spela</a></li>
+          <li><a href="/users/login">Spela</a></li>
 
-          <li><a href="">Om oss</a></li>
+          <li><a href="/users/login">Om oss</a></li>
 
           <li><a href="/users/login">Log in</a></li>
 
