lagt till aboutpage , konto samt spela där dem sist nämda kräver att man är inloggad

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -24,11 +24,11 @@
         <ul class="navList">
           <li><a href="/">Home</a></li>
 
-          <li><a href="/users/login">Spela</a></li>
+          <li><a href="/play">Spela</a></li>
 
-          <li><a href="/users/login">Om oss</a></li>
+          <li><a href="/about">Om oss</a></li>
 
-          <li><a href="/users/login">Konto</a></li>
+          <li><a href="/konto">Konto</a></li>
 
           <li><a href="/users/logout">Logga ut</a></li>
         </ul>
