--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,9 +26,9 @@
         <ul class="navList">
           <li><a href="/">Home</a></li>
 
-          <li><a href="">Spela</a></li>
+          <li><a href="/users/login">Spela</a></li>
 
-          <li><a href="">Om oss</a></li>
+          <li><a href="/about">Om oss</a></li>
 
           <li><a href="/users/login">Log in</a></li>
 
