jag har fixat lite svengelska frontend

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -24,13 +24,13 @@
         <ul class="navList">
           <li><a href="/">Home</a></li>
 
-          <li><a href="/play">Spela</a></li>
+          <li><a href="/play">Play</a></li>
 
-          <li><a href="/about">Om oss</a></li>
+          <li><a href="/about">About us</a></li>
 
-          <li><a href="/konto">Konto</a></li>
+          <li><a href="/konto">Account</a></li>
 
-          <li><a href="/users/logout">Logga ut</a></li>
+          <li><a href="/users/logout">Log out</a></li>
         </ul>
       </div>
       <div class="grid-itemGlobalChat">Global - chat</div>
