--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,9 +23,9 @@
         <ul class="navList">
           <li><a href="/">Home</a></li>
 
-          <li><a href="/users/login">Spela</a></li>
+          <li><a href="/users/login">Play</a></li>
 
-          <li><a href="/users/login">Om oss</a></li>
+          <li><a href="/users/login">About us</a></li>
 
           <li><a href="/users/login">Log in</a></li>
 
