--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,9 +26,9 @@
           <ul class="navList">
             <li><a href="/">Home</a></li>
   
-            <li><a href="/users/login">Spela</a></li>
+            <li><a href="/users/login">Play</a></li>
   
-            <li><a href="/about">Om oss</a></li>
+            <li><a href="/about">About us</a></li>
   
             <li><a href="/users/login">Log in</a></li>
   
