--- a/views/blackJack.ejs
+++ b/views/blackJack.ejs
@@ -18,9 +18,13 @@
     <div class="flex">
  
        
-    <button onclick="startGame() " class="startGameButton"> START</button>
-   
-    <button onclick="newCard() " class="startGameButton">NEW CARD</button>
+    <button onclick="startGame() " class="startGameButton" id="clickMessage-el"> START</button>
+   <div class="ihopp">
+    <button onclick="newCard() " class="newCardButton">NEW CARD</button>
+    <button onclick="stoppar() " class="newCardButton">STOP</button>
+  
+
+   </div>
  
     </div>
 
