--- a/views/blackJack.ejs
+++ b/views/blackJack.ejs
@@ -12,6 +12,7 @@
 <body class="bodyBlack" style="background-image: url('img/CasinoRug.jpg');  background-size: cover; ">
     <h1>blackJack</h1>
     <p id="message-el"> Want to play a round?</p>
+    <p id="winMessage-el"> </p>
     <p id="dealerCards-el">DealerCards: </p>
     <p id="cards-el">Cards:</p>
     <p id="sum-el">Sum:</p>
