har lagt till en coin variabel i mongodb

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,7 +11,9 @@
   </head>
   <body>
     <div class="grid-container">
+      <div class="empty"></div>
       <div class="grid-itemRubrik">
+
         <div class="Wrapp">
           <div class="rubrik">
             <h1>NordicViking</h1>
@@ -19,7 +21,12 @@
           </div>
           <a href="index.ejs"><img src="../img/VikingLogga.gif" alt="Logga" /></a>
         </div>
+
+  
       </div>
+
+      <div class="pcoins"> <h1>Du har: </h1></div>
+
       <div class="grid-itemNav">
         <ul class="navList">
           <li><a href="/">Home</a></li>
