--- a/public/css/blackJack.css
+++ b/public/css/blackJack.css
@@ -55,7 +55,6 @@ align-items: center;
     font-weight: bold;
     font-size: 1.5vw;
     color: #016f32;
-    width: 50%;
     background-color: goldenrod;
     padding-top: 0.25em;
     padding-bottom: 0.25em;
@@ -63,15 +62,16 @@ align-items: center;
     border-radius: 2px;
     margin-bottom: 0.15em;
     margin-top: 0.15em;
-    padding: 0.5em;
+    padding: 1em;
+    width: 55%;
 }
 
 
 .stopButton{
+    width: 45%;
     font-weight: bold;
-    font-size: 1vw;
+    font-size: 1.5vw;
     color: #016f32;
-    width: 50%;
     background-color: goldenrod;
     padding-top: 0.25em;
     padding-bottom: 0.25em;
@@ -79,6 +79,7 @@ align-items: center;
     border-radius: 2px;
     margin-bottom: 0.15em;
     margin-top: 0.15em;
+    padding: 1em;
 }
  
 .logoutButton{
@@ -109,7 +110,7 @@ display: flex;
 flex-direction: row;
 justify-content: center;
 align-items: center;
-width: 52.5vh;
-gap: 1em;
+width: 23.5vw;
+gap: 0.5vw;
 }
 
