--- a/public/css/gridStyle.css
+++ b/public/css/gridStyle.css
@@ -1,6 +1,16 @@
 
+.empty{
+  grid-area: empty;
+}
+
+
+
 .grid-itemRubrik {
   grid-area: rubrik;
+}
+
+.pcoins{
+  grid-area: coins;
 }
 
 .grid-itemNav {
@@ -120,7 +130,7 @@
     min-height: 100vh;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-areas:
-      "rubrik rubrik rubrik"
+      "empty rubrik coins"
       "nav nav nav"
       "globalChat bildspel news"
       "preFooter preFooter preFooter"
