--- a/views/blackJack.ejs
+++ b/views/blackJack.ejs
@@ -23,7 +23,7 @@
     <button onclick="startGame() " class="startGameButton" id="clickMessage-el"> START</button>
    <div class="ihopp">
     <button onclick="newCard() " class="newCardButton">NEW CARD</button>
-    <button onclick="stoppar() " class="newCardButton">STOP</button>
+    <button onclick="stoppar() " class="stopButton">STOP</button>
   
 
    </div>
