--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -25,17 +25,19 @@
   
       </div>
 
-      <div class="pcoins"> <h1>Du har: </h1></div>
+      <div class="pcoins"> <h1> <%= name %> : <%= coins %>$ </h1></div>
 
       <div class="grid-itemNav">
         <ul class="navList">
-          <li><a href="/">Home</a></li>
+          <li><a href="/dashboard">Home</a></li>
 
           <li><a href="/play">Play</a></li>
 
           <li><a href="/about">About us</a></li>
 
           <li><a href="/konto">Account</a></li>
+
+          <li><a href="/store">Store</a></li>
 
           <li><a href="/users/logout">Log out</a></li>
         </ul>
