--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,3 +58,11 @@ body {
 .navList a:hover {
   text-decoration: underline;
 }
+
+.pcoins{
+  color: #ffc759;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-top: 2vh;
+}
