--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,33 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/css/gridStyle.css" />
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/footer.css" />
-    <script src="https://kit.fontawesome.com/1c12de10b6.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/1c12de10b6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="grid-container">
       <div class="empty"></div>
       <div class="grid-itemRubrik">
-
         <div class="Wrapp">
           <div class="rubrik">
             <h1>NordicViking</h1>
-            <p> Welcome <%= name %></p>
+            <p>Welcome <%= name %></p>
           </div>
-          <a href="index.ejs"><img src="../img/VikingLogga.gif" alt="Logga" /></a>
+          <a href="index.ejs"
+            ><img src="../img/VikingLogga.gif" alt="Logga"
+          /></a>
         </div>
-
-  
       </div>
 
-      <div class="pcoins"> <h1> <%= name %> : <%= coins %>$ </h1>
-      
-      </div>
+      <div class="pcoins"><h1><%= name %> : <%= coins %>$</h1></div>
 
       <div class="grid-itemNav">
         <ul class="navList">
-          <li><a href="/dashboard" >Home</a></li>
+          <li><a href="/dashboard">Home</a></li>
 
           <li><a href="/play">Play</a></li>
 
@@ -47,29 +47,22 @@
       </div>
       <div class="grid-itemGlobalChat">Global - chat</div>
       <div class="grid-itemBildspel">
-        
         <i class="fas fa-arrow-right" id="nextBtn"></i>
-        
+
         <i class="fas fa-arrow-left" id="prevBtn"></i>
-        
-        
 
         <div class="carousel-slide">
-          
-          <img src="../img/getRitch.jpg" id="lastClone" alt="get ritch">
+          <img src="../img/getRitch.jpg" id="lastClone" alt="get ritch" />
 
-          <img src="../img/poker.jpg" alt="poker">
-          
-          <img src="../img/roulett.jpg" alt="roulett">
-          
-          <img src="../img/blackjack.jpg" alt="blackjack">
-          
-        
+          <img src="../img/poker.jpg" alt="poker" />
 
-          <img src="../img/poker.jpg" id="firstClone" alt="poker">
+          <img src="../img/roulett.jpg" alt="roulett" />
 
-         
+          <img src="../img/blackjack.jpg" alt="blackjack" />
 
+          <img src="../img/getRitch.jpg" alt="get ritch" />
+
+          <img src="../img/poker.jpg" id="firstClone" alt="poker" />
         </div>
       </div>
 
@@ -85,7 +78,7 @@
       <div class="grid-item9">
         <footer class="footer-distributed">
           <div class="footer-left">
-            <h3>NordicViking</h3> 
+            <h3>NordicViking</h3>
 
             <p class="footer-links">
               <a href="index.ejs">Hem</a>
