--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,18 @@
           <li><a href="/users/register">Sign up</a></li>
         </ul>
       </div>
-      <div class="grid-itemGlobalChat">Global - chat</div>
+      <div class="grid-itemGlobalChat"> <div>
+        <h1>Global chat</h1>
+      </div>
+    
+      <div id="message-container"></div>
+      <form id="send-container">
+        <input type="text" id="message-input">
+        <button type="submit" id="send-button"> send </button>
+      </form>
+
+
+      </div>
       <div class="grid-itemBildspel">
         <i class="fas fa-arrow-right" id="nextBtn"></i>
 
@@ -118,7 +129,7 @@
 
             <div class="footer-icons">
               <a href="https://www.facebook.com"
-                ><i class="fa fa-facebook">
+                ><i class="fa fa-facebookf">
                   <img
                     class="icon"
                     src="img/facebookLogga.gif"
@@ -126,7 +137,7 @@
                     width="50px" /></i
               ></a>
               <a href="https://www.instagram.com"
-                ><i class="fa fa-instagram">
+                ><i class="fa fa-ifnstagram">
                   <img
                     class="icon"
                     src="img/instaLogga.gif"
@@ -134,7 +145,7 @@
                     width="50px" /></i
               ></a>
               <a href="https://www.linkedin.com"
-                ><i class="fa fa-linkedin">
+                ><i class="fa fa-linkedifn">
                   <img
                     class="icon"
                     src="img/linkedinLogga.gif"
@@ -142,7 +153,7 @@
                     width="50px" /></i
               ></a>
               <a href="https://www.github.com"
-                ><i class="fa fa-github">
+                ><i class="fa fa-gitfhub">
                   <img
                     class="icon"
                     src="img/githubLogga (1).gif"
